--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,2 @@
-<h1>About</h1>
-<p>Find out more about the Strength Coach app</p>
+<% provide(:title, "About") %>
+<p>Find out more about the app</p>
