--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title></title>
+		<title><%= yield(:title) %></title>
 		<%= stylesheet_link_tag	'https://fonts.googleapis.com/css?family=Roboto:300,400,500,700', media: 'all', 'data-turbolinks-track' => true %>
 		<%= stylesheet_link_tag	'https://fonts.googleapis.com/icon?family=Material+Icons', media: 'all', 'data-turbolinks-track' => true %>
 		<%= stylesheet_link_tag	'application', media: 'all', 'data-turbolinks-track' => true %>
