--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,19 +1,12 @@
 <% provide(:title, 'Reset password') %>
-<h1>Reset Password</h1>
+<h2>Reset Password</h2>
 
 <%= form_for(@user, url: password_reset_path(params[:id])) do |f| %>
   <%= render 'shared/error_messages' %>
-
-    <%= hidden_field_tag :email, @user.email %>
-  <div class="field">
-    <%= f.label :password %><br>
-    <%= f.password_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirmation" %><br>
-    <%= f.password_field :password_confirmation %>
-  </div>
-  <div class="actions">
-    <%= f.submit "Update password" %>
-  </div>
+  <%= hidden_field_tag :email, @user.email %>
+  <%= f.password_field :password, placeholder: "Password" %>
+  <%= errors_for @user, :password %>
+  <%= f.password_field :password_confirmation, placeholder: "Confirmation" %>
+  <%= errors_for @user, :password_confirmation %>
+  <%= f.submit "Submit" %>
 <% end %>
