--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, 'Forgot password') %>
 <h2>Forgot password</h2>
 <%= form_for(:password_reset, url: password_resets_path) do |f| %>
 	<%= f.text_field :email, placeholder: "Email" %>
