--- a/app/assets/stylesheets/visibility.css
+++ b/app/assets/stylesheets/visibility.css
@@ -1,8 +1,6 @@
-.hide {
-  display: none; }
+.hide { display: none; }
 
-.invisible {
-  visibility: hidden; }
+.invisible { visibility: hidden; }
 
 /* small displays */
 @media only screen {
