--- a/app/assets/stylesheets/buttons.css
+++ b/app/assets/stylesheets/buttons.css
@@ -18,47 +18,47 @@ button, .button, input[type="submit"], input[type="reset"], input[type="button"]
 button:hover, button:focus, .button:hover, .button:focus {
   background-color: #2285a2; }
 button:hover, button:focus, .button:hover, .button:focus {
-  color: #FFFFFF; }
+  color: #fff; }
 button.secondary, .button.secondary {
   background-color: #e9e9e9;
   border-color: #bababa;
-  color: #333333; }
+  color: #333; }
   button.secondary:hover, button.secondary:focus, .button.secondary:hover, .button.secondary:focus {
     background-color: #bababa; }
   button.secondary:hover, button.secondary:focus, .button.secondary:hover, .button.secondary:focus {
-    color: #333333; }
+    color: #333; }
 button.success, .button.success {
   background-color: #5da423;
   border-color: #4a831c;
-  color: #FFFFFF; }
+  color: #fff; }
   button.success:hover, button.success:focus, .button.success:hover, .button.success:focus {
     background-color: #4a831c; }
   button.success:hover, button.success:focus, .button.success:hover, .button.success:focus {
-    color: #FFFFFF; }
+    color: #fff; }
 button.alert, .button.alert {
   background-color: #c60f13;
   border-color: #9e0c0f;
-  color: #FFFFFF; }
+  color: #fff; }
   button.alert:hover, button.alert:focus, .button.alert:hover, .button.alert:focus {
     background-color: #9e0c0f; }
   button.alert:hover, button.alert:focus, .button.alert:hover, .button.alert:focus {
-    color: #FFFFFF; }
+    color: #fff; }
 button.warning, .button.warning {
   background-color: #f08a24;
   border-color: #cf6e0e;
-  color: #FFFFFF; }
+  color: #fff; }
   button.warning:hover, button.warning:focus, .button.warning:hover, .button.warning:focus {
     background-color: #cf6e0e; }
   button.warning:hover, button.warning:focus, .button.warning:hover, .button.warning:focus {
-    color: #FFFFFF; }
+    color: #fff; }
 button.info, .button.info {
   background-color: #a0d3e8;
   border-color: #61b6d9;
-  color: #333333; }
+  color: #333; }
   button.info:hover, button.info:focus, .button.info:hover, .button.info:focus {
     background-color: #61b6d9; }
   button.info:hover, button.info:focus, .button.info:hover, .button.info:focus {
-    color: #FFFFFF; }
+    color: #fff; }
 button.large, .button.large {
   padding: 1.125rem 2.25rem 1.1875rem 2.25rem;
   font-size: 1.25rem; }
@@ -85,79 +85,79 @@ button.round, .button.round {
 button.disabled, button[disabled], .button.disabled, .button[disabled] {
   background-color: #2ba6cb;
   border-color: #2285a2;
-  color: #FFFFFF;
+  color: #fff;
   box-shadow: none;
   cursor: default;
   opacity: 0.7; }
   button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
     background-color: #2285a2; }
   button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
-    color: #FFFFFF; }
+    color: #fff; }
   button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
     background-color: #2ba6cb; }
   button.disabled.secondary, button[disabled].secondary, .button.disabled.secondary, .button[disabled].secondary {
     background-color: #e9e9e9;
     border-color: #bababa;
-    color: #333333;
+    color: #333;
     box-shadow: none;
     cursor: default;
     opacity: 0.7; }
     button.disabled.secondary:hover, button.disabled.secondary:focus, button[disabled].secondary:hover, button[disabled].secondary:focus, .button.disabled.secondary:hover, .button.disabled.secondary:focus, .button[disabled].secondary:hover, .button[disabled].secondary:focus {
       background-color: #bababa; }
     button.disabled.secondary:hover, button.disabled.secondary:focus, button[disabled].secondary:hover, button[disabled].secondary:focus, .button.disabled.secondary:hover, .button.disabled.secondary:focus, .button[disabled].secondary:hover, .button[disabled].secondary:focus {
-      color: #333333; }
+      color: #333; }
     button.disabled.secondary:hover, button.disabled.secondary:focus, button[disabled].secondary:hover, button[disabled].secondary:focus, .button.disabled.secondary:hover, .button.disabled.secondary:focus, .button[disabled].secondary:hover, .button[disabled].secondary:focus {
       background-color: #e9e9e9; }
   button.disabled.success, button[disabled].success, .button.disabled.success, .button[disabled].success {
     background-color: #5da423;
     border-color: #4a831c;
-    color: #FFFFFF;
+    color: #fff;
     box-shadow: none;
     cursor: default;
     opacity: 0.7; }
     button.disabled.success:hover, button.disabled.success:focus, button[disabled].success:hover, button[disabled].success:focus, .button.disabled.success:hover, .button.disabled.success:focus, .button[disabled].success:hover, .button[disabled].success:focus {
       background-color: #4a831c; }
     button.disabled.success:hover, button.disabled.success:focus, button[disabled].success:hover, button[disabled].success:focus, .button.disabled.success:hover, .button.disabled.success:focus, .button[disabled].success:hover, .button[disabled].success:focus {
-      color: #FFFFFF; }
+      color: #fff; }
     button.disabled.success:hover, button.disabled.success:focus, button[disabled].success:hover, button[disabled].success:focus, .button.disabled.success:hover, .button.disabled.success:focus, .button[disabled].success:hover, .button[disabled].success:focus {
       background-color: #5da423; }
   button.disabled.alert, button[disabled].alert, .button.disabled.alert, .button[disabled].alert {
     background-color: #c60f13;
     border-color: #9e0c0f;
-    color: #FFFFFF;
+    color: #fff;
     box-shadow: none;
     cursor: default;
     opacity: 0.7; }
     button.disabled.alert:hover, button.disabled.alert:focus, button[disabled].alert:hover, button[disabled].alert:focus, .button.disabled.alert:hover, .button.disabled.alert:focus, .button[disabled].alert:hover, .button[disabled].alert:focus {
       background-color: #9e0c0f; }
     button.disabled.alert:hover, button.disabled.alert:focus, button[disabled].alert:hover, button[disabled].alert:focus, .button.disabled.alert:hover, .button.disabled.alert:focus, .button[disabled].alert:hover, .button[disabled].alert:focus {
-      color: #FFFFFF; }
+      color: #fff; }
     button.disabled.alert:hover, button.disabled.alert:focus, button[disabled].alert:hover, button[disabled].alert:focus, .button.disabled.alert:hover, .button.disabled.alert:focus, .button[disabled].alert:hover, .button[disabled].alert:focus {
       background-color: #c60f13; }
   button.disabled.warning, button[disabled].warning, .button.disabled.warning, .button[disabled].warning {
     background-color: #f08a24;
     border-color: #cf6e0e;
-    color: #FFFFFF;
+    color: #fff;
     box-shadow: none;
     cursor: default;
     opacity: 0.7; }
     button.disabled.warning:hover, button.disabled.warning:focus, button[disabled].warning:hover, button[disabled].warning:focus, .button.disabled.warning:hover, .button.disabled.warning:focus, .button[disabled].warning:hover, .button[disabled].warning:focus {
       background-color: #cf6e0e; }
     button.disabled.warning:hover, button.disabled.warning:focus, button[disabled].warning:hover, button[disabled].warning:focus, .button.disabled.warning:hover, .button.disabled.warning:focus, .button[disabled].warning:hover, .button[disabled].warning:focus {
-      color: #FFFFFF; }
+      color: #fff; }
     button.disabled.warning:hover, button.disabled.warning:focus, button[disabled].warning:hover, button[disabled].warning:focus, .button.disabled.warning:hover, .button.disabled.warning:focus, .button[disabled].warning:hover, .button[disabled].warning:focus {
       background-color: #f08a24; }
   button.disabled.info, button[disabled].info, .button.disabled.info, .button[disabled].info {
     background-color: #a0d3e8;
     border-color: #61b6d9;
-    color: #333333;
+    color: #333;
     box-shadow: none;
     cursor: default;
     opacity: 0.7; }
     button.disabled.info:hover, button.disabled.info:focus, button[disabled].info:hover, button[disabled].info:focus, .button.disabled.info:hover, .button.disabled.info:focus, .button[disabled].info:hover, .button[disabled].info:focus {
       background-color: #61b6d9; }
     button.disabled.info:hover, button.disabled.info:focus, button[disabled].info:hover, button[disabled].info:focus, .button.disabled.info:hover, .button.disabled.info:focus, .button[disabled].info:hover, .button[disabled].info:focus {
-      color: #FFFFFF; }
+      color: #fff; }
     button.disabled.info:hover, button.disabled.info:focus, button[disabled].info:hover, button[disabled].info:focus, .button.disabled.info:hover, .button.disabled.info:focus, .button[disabled].info:hover, .button[disabled].info:focus {
       background-color: #a0d3e8; }
 
@@ -168,3 +168,13 @@ button::-moz-focus-inner {
 @media only screen and (min-width: 40.0625em) {
   button, .button {
     display: inline-block; } }
+
+.fab {
+  border-radius: 50%;
+  padding: 18px;
+}
+
+.mini-fab {
+  border-radius: 50%;
+  padding: 9px;
+}
