--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -14,7 +14,7 @@ header h1 {
 	font-size: 2.1em;
 	font-weight: 400;
 	color: #fff;
-	vertical-align: 5px;
+	vertical-align: middle;
 }
 
 header nav a {
