--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
 <footer>
-	<%= link_to content_tag(:i, 'add', class: 'material-icons'), signup_path, class: ['mdl-button', 'mdl-js-button', 'mdl-button--fab', 'mdl-button--colored']  %>
+	<%= link_to content_tag(:i, 'add', class: 'material-icons'), signup_path, class: ['button', 'fab']  %>
 </footer>
