--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,10 +13,10 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= link_to user.name, user %></td>
-        <td class="text-center"><%= link_to content_tag(:i, "edit", class: "material-icons"), edit_user_path(user) %></td>
+        <td class="text-center"><%= link_to content_tag(:i, "edit", class: ["material-icons", "md-dark"]), edit_user_path(user) %></td>
         <td class="text-center">
         <% if current_user.admin? && !current_user?(user) %>
-          <%= link_to content_tag(:i, "delete", class: "material-icons"), user, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <%= link_to content_tag(:i, "delete", class: ["material-icons", "md-dark"]), user, method: :delete, data: { confirm: 'Are you sure?' } %>
         <% end %>
         </td>
       </tr>
