--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,5 @@
 <footer>
-	<%= link_to content_tag(:i, 'add', class: 'material-icons'), signup_path, class: ['button', 'fab']  %>
+	<%= unless fab_action().nil?
+			link_to content_tag(:i, 'add', class: 'material-icons'), fab_action(), class: ['button', 'fab']
+		end %>
 </footer>
