--- a/app/assets/stylesheets/typography.css
+++ b/app/assets/stylesheets/typography.css
@@ -18,3 +18,15 @@ p {
 .text-left { text-align: left !important; }
 .text-center { text-align: center !important; }
 .text-right { text-align: right !important; }
+
+a {
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
+strong {
+	font-weight: bold;
+}
