--- a/app/assets/stylesheets/buttons.css
+++ b/app/assets/stylesheets/buttons.css
@@ -16,9 +16,11 @@ button, .button, input[type="submit"], input[type="reset"], input[type="button"]
 }
 
 button:hover, button:focus, .button:hover, .button:focus {
-  background-color: #2285a2; }
-button:hover, button:focus, .button:hover, .button:focus {
-  color: #fff; }
+  background-color: #2285a2;
+  color: #fff;
+  text-decoration: none;
+}
+
 button.secondary, .button.secondary {
   background-color: #e9e9e9;
   border-color: #bababa;
@@ -165,10 +167,6 @@ button::-moz-focus-inner {
   border: 0;
   padding: 0; }
 
-@media only screen and (min-width: 40.0625em) {
-  button, .button {
-    display: inline-block; } }
-
 .fab {
   border-radius: 50%;
   padding: 18px;
@@ -178,3 +176,7 @@ button::-moz-focus-inner {
   border-radius: 50%;
   padding: 9px;
 }
+
+@media only screen and (min-width: 40.0625em) {
+  button, .button {
+    display: inline-block; } }
