--- a/lib/templates/erb/scaffold/_form.html.erb
+++ b/lib/templates/erb/scaffold/_form.html.erb
@@ -12,4 +12,9 @@
     <% end -%>
   <% end -%>
   <%%= f.submit "Submit" %>
+  <div class="row">
+      <div class="small-12 columns text-center">
+        <%%= f.submit "Submit" %>
+      </div>
+  </div>
 <%% end %>
