--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -2,7 +2,7 @@
 <h2>Reset Password</h2>
 
 <%= form_for(@user, url: password_reset_path(params[:id])) do |f| %>
-	<%= render 'shared/error_messages' %>
+	<%= render 'shared/error_messages', object: f.object %>
 	<%= hidden_field_tag :email, @user.email %>
 	<%= f.password_field :password, placeholder: "Password" %>
 	<%= errors_for @user, :password %>
