--- a/lib/templates/erb/scaffold/_form.html.erb
+++ b/lib/templates/erb/scaffold/_form.html.erb
@@ -7,11 +7,10 @@
       <%%= f.password_field :password_confirmation, placeholder: "Confirmation" %>
       <%%= errors_for @<%= singular_table_name %>, :password_confirmation %>
     <% else -%>
-      <%%= f.<%= attribute.field_type %> :<%= attribute.column_name %>, placeholder: "<%= attribute.column_name %>" %>
-      <%%= errors_for @exercise, :<%= attribute.column_name %> %>
+      <%%= f.<%= attribute.field_type %> :<%= attribute.column_name %>, placeholder: "<%= attribute.column_name.titleize %>" %>
+      <%%= errors_for @<%= singular_table_name %>, :<%= attribute.column_name %> %>
     <% end -%>
   <% end -%>
-  <%%= f.submit "Submit" %>
   <div class="row">
       <div class="small-12 columns text-center">
         <%%= f.submit "Submit" %>
