--- a/lib/templates/erb/scaffold/new.html.erb
+++ b/lib/templates/erb/scaffold/new.html.erb
@@ -1,3 +1,3 @@
 <%% provide(:title, 'New <%= singular_table_name.titleize %>') %>
 <h2>New <%= singular_table_name.titleize %></h2>
-<%= render 'form' %>
+<%%= render 'form' %>
